force-app/main/default/objects/Crew_Change_Manifest__c/Crew_Change_Manifest__c.object-meta.xml
<CustomObject>
    <label>Crew Change Manifest</label>
    <nameField>
        <displayFormat>CCM-{000}</displayFormat>
        <label>Manifest #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Change Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>