force-app/main/default/objects/Crew_Change_Manifest__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <inlineHelpText>Place of Arrival</inlineHelpText>
    <label>Arrival</label>
    <length>30</length>
    <type>Text</type>
</CustomField>