force-app/main/default/objects/Crew_Change_Manifest__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time (ETA)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>