force-app/main/default/objects/Crew_Change_Manifest__c/fields/cc_Calendar__c.field-meta.xml
<CustomField>
    <fullName>cc_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Update Crew Change Calendar</inlineHelpText>
    <label>Update CC Calendar</label>
    <type>Checkbox</type>
</CustomField>