force-app/main/default/objects/Crew_Change_Manifest__c/fields/CCM_Details__c.field-meta.xml
<CustomField>
    <fullName>CCM_Details__c</fullName>
    <label>CCM Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>