force-app/main/default/objects/Crew_Change_Manifest__c/fields/Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <type>TextArea</type>
</CustomField>