force-app/main/default/objects/Crew_Change_Manifest__c/fields/Crew_Change_Location__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Location__c</fullName>
    <label>Crew Change Location</label>
    <type>TextArea</type>
</CustomField>