force-app/main/default/objects/Crew_Change_Manifest__c/fields/Crew_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Type__c</fullName>
    <label>Crew Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Roster</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>