force-app/main/default/objects/Crew_Change_Manifest__c/fields/Date_of_Crew_Change_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Crew_Change_Out__c</fullName>
    <label>Date of Crew Change Out</label>
    <type>Date</type>
</CustomField>