force-app/main/default/objects/Crew_Change_Manifest__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <inlineHelpText>Details of place where departing</inlineHelpText>
    <label>Departure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>