force-app/main/default/objects/Crew_Change_Manifest__c/fields/Freight_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Freight_In_Out__c</fullName>
    <label>Freight In/Out</label>
    <type>TextArea</type>
</CustomField>