force-app/main/default/objects/Crew_Change_Manifest__c/fields/HR_Lead__c.field-meta.xml
<CustomField>
    <fullName>HR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOO/HR</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Crew Change Manifests (HR Lead)</relationshipLabel>
    <relationshipName>Crew_Change_Manifests1</relationshipName>
    <type>Lookup</type>
</CustomField>