force-app/main/default/objects/Crew_Change_Manifest__c/fields/Journey_Manager__c.field-meta.xml
<CustomField>
    <fullName>Journey_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Crew Change Manifests</relationshipLabel>
    <relationshipName>Crew_Change_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>