force-app/main/default/objects/Crew_Change_Manifest__c/fields/Journey_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Journey_Manager_Contact__c</fullName>
    <label>Journey Manager Contact #</label>
    <type>Phone</type>
</CustomField>