force-app/main/default/objects/Crew_Change_Manifest__c/fields/Manifest_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manifest Emailed</label>
    <type>Checkbox</type>
</CustomField>