force-app/main/default/objects/Crew_Change_Manifest__c/fields/PO_Completed__c.field-meta.xml
<CustomField>
    <fullName>PO_Completed__c</fullName>
    <inlineHelpText>Enter all PO numbers that are relevant to the crew change</inlineHelpText>
    <label>PO# Completed</label>
    <type>TextArea</type>
</CustomField>