force-app/main/default/objects/Crew_Change_Manifest__c/fields/Scheduled_Stops__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Stops__c</fullName>
    <inlineHelpText>Scheduled Stops are planned stops required to collect or drop off personnel</inlineHelpText>
    <label>Scheduled Stops</label>
    <type>TextArea</type>
</CustomField>