force-app/main/default/objects/Crew_Change_Manifest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Manifest Emailed</fullName>
                <isActive>false</isActive>
                <label>Manifest Emailed</label>
            </value>
            <value>
                <fullName>Update to Off Shift</fullName>
                <isActive>false</isActive>
                <label>Update to Off Shift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>