force-app/main/default/objects/Crew_Change_Manifest__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Crew Change Manifests</relationshipLabel>
    <relationshipName>Crew_Change_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>