force-app/main/default/objects/Crew_Change_Manifest__c/fields/Travel_Details__c.field-meta.xml
<CustomField>
    <fullName>Travel_Details__c</fullName>
    <label>Travel Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Plane_Charter</fullName>
                <label>Plane - Charter</label>
            </value>
            <value>
                <fullName>Plane - Commercial</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
                <isActive>false</isActive>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <isActive>false</isActive>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>