force-app/main/default/objects/Crew_Change_Manifest__c/fields/Travel_Particulars__c.field-meta.xml
<CustomField>
    <fullName>Travel_Particulars__c</fullName>
    <inlineHelpText>Provide specific details on flight information (commercial/Charter) 
or vehicle to be used eg hire vehicle from Avis Roma, or WD Vehicle Rego #.....  See Darren Haddock for collection</inlineHelpText>
    <label>Travel Particulars &amp; Stops</label>
    <type>TextArea</type>
</CustomField>