force-app/main/default/objects/Crew_Change_Manifest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crew Change In</fullName>
            </value>
            <value>
                <fullName>Crew Change Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>