force-app/main/default/objects/Crew_Change_Manifest__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit #</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Crew Change Manifests</relationshipLabel>
    <relationshipName>Crew_Change_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>