force-app/main/default/objects/Crew_Change_Manifest__c/listViews/All_Crew_Changes.listView-meta.xml
<ListView>
    <fullName>All_Crew_Changes</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Date_of_Crew_Change_In__c</columns>
    <columns>Team__c</columns>
    <columns>CCM_Details__c</columns>
    <columns>Crew_Change_Type__c</columns>
    <columns>Status__c</columns>
    <columns>HR_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All | Crew Changes</label>
</ListView>