force-app/main/default/objects/Crew_Change_Manifest__c/listViews/Camp_09_Crew_Changes.listView-meta.xml
<ListView>
    <fullName>Camp_09_Crew_Changes</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Date_of_Crew_Change_In__c</columns>
    <columns>Team__c</columns>
    <columns>CCM_Details__c</columns>
    <columns>Crew_Change_Type__c</columns>
    <columns>Status__c</columns>
    <columns>HR_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>Camp 9</value>
    </filters>
    <filters>
        <field>Date_of_Crew_Change_In__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/18/2025</value>
    </filters>
    <label>Camp 09 | Crew Changes</label>
</ListView>