force-app/main/default/objects/Crew_Change_Manifest__c/listViews/R22_Crew_Changes.listView-meta.xml
<ListView>
    <fullName>R22_Crew_Changes</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Date_of_Crew_Change_In__c</columns>
    <columns>Team__c</columns>
    <columns>CCM_Details__c</columns>
    <columns>Crew_Change_Type__c</columns>
    <columns>Status__c</columns>
    <columns>HR_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>Rig 22,camp 11</value>
    </filters>
    <filters>
        <field>Date_of_Crew_Change_In__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2025</value>
    </filters>
    <label>Rig 22/Camp 11 | Crew Changes</label>
    <sharedTo>
        <group>BOO</group>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Rig_22</group>
    </sharedTo>
</ListView>